test/modules/errors/duplicateModules2.chpl
module M {
  writeln("In another M.init()");
}
